Bugfix: removing ugly scrollbar on Windows browser and completly translates the site to Indonesian language

--- a/src/index.css
+++ b/src/index.css
@@ -162,8 +162,7 @@ input[type="checkbox"] {
   padding: 3.2rem 2rem;
 }
 
-.box::-webkit-scrollbar,
-.list::-webkit-scrollbar {
+ul::-webkit-scrollbar {
   display: none;
   scroll-behavior: smooth;
 }
